tab5 Button do slide funcionando
ELe funciona através do *ngIf

--- a/src/app/tab5/tab5.page.html
+++ b/src/app/tab5/tab5.page.html
@@ -24,7 +24,7 @@
         </div>
 
         <ion-slides>
-            <ion-slide>
+            <ion-slide *ngIf="tipo == 'recebidos'">
                 <div style=" width: 100%" class="slide-inner ion-padding">
                     <span>Recebidos</span>
                     <ion-list>
@@ -38,7 +38,7 @@
                 </div>
             </ion-slide>
 
-            <ion-slide>
+            <ion-slide *ngIf="tipo == 'enviados'">
                 <div style=" width: 100%" class="slide-inner ion-padding">
                     <span>Enviados</span>
                     <ion-list>
