--- a/src/app/tab6/tab6.page.html
+++ b/src/app/tab6/tab6.page.html
@@ -1,6 +1,6 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title>tab6</ion-title>
+  <ion-toolbar [color]="colorStatus?'toolbar-color':'medium'">
+      <ion-title>Agenda</ion-title>
   </ion-toolbar>
 </ion-header>
 
