--- a/src/app/tabs2/tabs2.page.html
+++ b/src/app/tabs2/tabs2.page.html
@@ -5,12 +5,12 @@
       <ion-icon name="home"></ion-icon>
     </ion-tab-button>
 
-    <ion-tab-button tab="tab7">
-      <ion-icon name="pie"></ion-icon>
+    <ion-tab-button tab="tab4">
+      <ion-icon name="calendar"></ion-icon>
     </ion-tab-button>
 
-    <ion-tab-button tab="tab8">
-      <ion-icon name="bookmarks"></ion-icon>
+    <ion-tab-button tab="tab5">
+      <ion-icon name="chatbubbles"></ion-icon>
     </ion-tab-button>
   </ion-tab-bar>
 </ion-tabs>
