--- a/src/app/tab6/tab6.page.html
+++ b/src/app/tab6/tab6.page.html
@@ -1,9 +1,16 @@
 <ion-header>
   <ion-toolbar [color]="colorStatus?'toolbar-color':'medium'">
-      <ion-title>Agenda</ion-title>
+    <ion-title>Agenda</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
+  <ion-list>
+    <ion-item *ngFor="let atendido of atendidos | async">
+      <ion-label>
+        <h3>{{atendido.Nome}}</h3>
+      </ion-label>
+    </ion-item>
+  </ion-list>
 
 </ion-content>
