Modal de Agenda 1/2

--- a/src/app/agenda/agenda.page.html
+++ b/src/app/agenda/agenda.page.html
@@ -10,5 +10,63 @@
 </ion-header>
 
 <ion-content>
+  <ion-list>
+    <ion-item>
+      <ion-label>Data de Atendimento</ion-label>
+      <ion-datetime 
+      display-format="DD MMM YYYY"
+      strin
+      cancelText="Cancelar" 
+      doneText="Escolher"
+      [ngModel]="dateAtend.toISOString()"
+      placeholder="Seleciona a data"
+      (ionChange)="mudaData( $event )"></ion-datetime>
+    </ion-item>
+  </ion-list>
 
+  <ion-list>
+    <ion-list-header>
+      Preencha os dados abaixo
+    </ion-list-header>
+
+    <ion-item>
+      <ion-label position="floating">PERÍODO</ion-label>
+      <ion-row wrap>
+        <ion-col size="5.5">
+          <ion-input [(ngModel)]="pInput" placeholder="Chegada:"></ion-input>
+        </ion-col>
+
+        <ion-col size="5.5">
+          <ion-input [(ngModel)]="pOutput" placeholder="Saída:"></ion-input>
+        </ion-col>
+      </ion-row>
+    </ion-item>
+
+
+
+    <ion-item>
+      <ion-label position="floating">NECESSIDADES FISIOLÓGICAS</ion-label>
+      <ion-input [(ngModel)]="nTimes" placeholder="Vezes:"></ion-input>
+    </ion-item>
+
+
+    <ion-item>
+      <ion-label>Comeu: </ion-label>
+      <ion-checkbox [(ngModel)]="comeu" color="medium"></ion-checkbox>
+    </ion-item>
+
+
+    <ion-item>
+      <ion-label position="floating">COMPORTAMENTO:</ion-label>
+      <ion-range min="0" max="10" pin="true" [(ngModel)]="conduct" color="medium">
+
+        <ion-icon slot="start" name="sad"></ion-icon>
+        <ion-icon slot="end" name="happy"></ion-icon>
+        <ion-note color="dark" slot="end">
+          {{conduct}}
+        </ion-note>
+
+      </ion-range>
+    </ion-item>
+  </ion-list>
 </ion-content>
