--- a/src/app/req/req.page.html
+++ b/src/app/req/req.page.html
@@ -15,7 +15,7 @@
   <div *ngIf="modais == 1">
     <ion-list>
       <ion-list-header>
-        Prencha os dados abaixo para fazer seu pedido
+        Preencha os dados abaixo para fazer seu pedido
       </ion-list-header>
       <ion-item>
         <ion-label position="floating">Tamanhos disponíveis</ion-label>
