--- a/src/app/tab6/tab6.page.html
+++ b/src/app/tab6/tab6.page.html
@@ -1,9 +1,9 @@
 <ion-header>
   <ion-toolbar [color]="colorStatus?'toolbar-color':'medium'">
-      <ion-title>Agenda</ion-title>
+    <ion-title>Agenda</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-
+  <ion-button (click)="presentModal()" expand="block" color="medium">Ver Modal</ion-button>
 </ion-content>
