--- a/src/app/tab6/tab6.page.html
+++ b/src/app/tab6/tab6.page.html
@@ -5,9 +5,9 @@
 </ion-header>
 
 <ion-content>
-  <ion-button (click)="presentModal()" expand="block" color="medium">Ver Modal</ion-button>
+  
   <ion-list>
-    <ion-item *ngFor="let atendido of atendidos | async">
+    <ion-item *ngFor="let atendido of atendidos | async" (click)="presentModal(atendido)">
       <ion-label>
         <h3>{{atendido.Nome}}</h3>
       </ion-label>
