--- a/src/app/tab7/tab7.page.html
+++ b/src/app/tab7/tab7.page.html
@@ -1,6 +1,11 @@
 <ion-header>
   <ion-toolbar>
     <ion-title>tab7</ion-title>
+    <ion-buttons slot="end">
+      <ion-button (click)="perfil()">
+        <ion-icon slot="icon-only" name="contact"></ion-icon>
+      </ion-button>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
