--- a/src/app/tab6/tab6.page.html
+++ b/src/app/tab6/tab6.page.html
@@ -1,11 +1,16 @@
 <ion-header>
   <ion-toolbar [color]="colorStatus?'toolbar-color':'medium'">
+    <ion-buttons slot="end">
+      <ion-button (click)="perfil()">
+        <ion-icon slot="icon-only" name="contact"></ion-icon>
+      </ion-button>
+    </ion-buttons>
     <ion-title>Agenda</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-  
+
   <ion-list>
     <ion-item *ngFor="let atendido of atendidos | async" (click)="presentModal(atendido)">
       <ion-label>
