--- a/src/app/tabs3/tabs3.page.html
+++ b/src/app/tabs3/tabs3.page.html
@@ -10,11 +10,11 @@
     </ion-tab-button>
 
     <ion-tab-button tab="tab3">
-      <ion-icon name="chatbubbles"></ion-icon>
+      <ion-icon name="bookmarks"></ion-icon>
     </ion-tab-button>
 
     <ion-tab-button tab="tab7">
-      <ion-icon name="chatbubbles"></ion-icon>
+      <ion-icon name="contacts"></ion-icon>
     </ion-tab-button>
 
     <ion-tab-button tab="tab5">
