--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -21,13 +21,12 @@
 
 
 
-    <ion-card class="informe" *ngFor="let aviso of informes | async" (click)="presentAlert(aviso)">
+    <ion-card class="informe" *ngFor="let informe of informes | async" (click)="presentAlert(informe)">
         <ion-card-content>
-            <ion-card-subtitle>Dia: {{ aviso.data.toDate() | date:'dd/MM/yyyy'}}</ion-card-subtitle>
-            <p>Idas ao banheiro: {{ aviso.idaBanheiro }}</p>
-            <p>Alimentação: {{ aviso.alimentacao }}</p>
-            <p>Dormiu: {{ aviso.dormiu }}</p>
-            <p>comportamento: {{ aviso.comportamento }}</p>
+            <ion-card-subtitle>Dia: {{ informe.dateAtend.toDate() | date:'dd/MM/yyyy'}}</ion-card-subtitle>
+            <p>Idas ao banheiro: {{ informe.nTime }}</p>
+            <p>Alimentação: {{ informe.nTime }}</p>
+            <p>Nota de Comportamento: {{ informe.conduct }}</p>
 
         </ion-card-content>
     </ion-card>
