--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -1,5 +1,10 @@
 <ion-header>
     <ion-toolbar [color]="colorStatus?'toolbar-color':'medium'">
+            <ion-buttons slot="end">
+                    <ion-button (click)="sair()">
+                        <ion-icon slot="icon-only" name="log-out"></ion-icon>
+                    </ion-button>
+                </ion-buttons>
         <ion-title>
             Informes
         </ion-title>
