--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -22,23 +22,37 @@
       </ion-list-header>
       <ion-item>
         <ion-label>Pedidos de Fardamento</ion-label>
-        <ion-note *ngIf="status.fard == false" color="danger">Desativado</ion-note>
-        <ion-note *ngIf="status.fard == true" color="success">Ativo</ion-note>
+        <div *ngIf="sFar == false">
+          <ion-note color="danger">Desativado</ion-note>
+        </div>
+
+        <div *ngIf="sFar == true">
+          <ion-note color="success">Ativado</ion-note>
+        </div>
       </ion-item>
     </ion-list>
     <ion-list>
       <ion-item>
         <ion-label>Pedidos de Módulos</ion-label>
-        <ion-note *ngIf="status.mod == false" color="danger">Desativado</ion-note>
-        <ion-note *ngIf="status.mod == true" color="success">Ativo</ion-note>
+        <div *ngIf="sMod == false">
+            <ion-note color="danger">Desativado</ion-note>
+          </div>
+  
+          <div *ngIf="sMod == true">
+            <ion-note color="success">Ativado</ion-note>
+          </div>
       </ion-item>
     </ion-list>
     <ion-list>
       <ion-item>
         <ion-label>Pedidos de Reuniões</ion-label>
-        <ion-note *ngIf="status.reun == false" color="danger">Desativado</ion-note>
-        <ion-note *ngIf="status.reun == true" color="success">Ativo</ion-note>
-
+        <div *ngIf="sReu == false">
+            <ion-note color="danger">Desativado</ion-note>
+          </div>
+  
+          <div *ngIf="sReu == true">
+            <ion-note color="success">Ativado</ion-note>
+          </div>
       </ion-item>
       <ion-button expand="small" slot="end" fill="outline" (click)="presentModal('req')">Alterar</ion-button>
 
