--- a/src/app/informe/informe.page.html
+++ b/src/app/informe/informe.page.html
@@ -5,7 +5,7 @@
         <ion-icon slot="icon-only" name="close"></ion-icon>
       </ion-button>
     </ion-buttons>
-    <ion-title>{{this.info.dAtend.toDate() | date:'dd/MM/yyyy'}}</ion-title>
+    <ion-title>Descrição do Dia</ion-title>
   </ion-toolbar>
 </ion-header>
 
