--- a/src/app/req/req.page.html
+++ b/src/app/req/req.page.html
@@ -20,19 +20,19 @@
       <ion-list-header>Ativar ou desativar</ion-list-header>
       <ion-item>
         <ion-label>Pedidos de Fardamento</ion-label>
-        <ion-toggle [(ngModel)]="sFar" color="medium"></ion-toggle>
+        <ion-toggle [(ngModel)]="sFar" value="sFar" color="medium"></ion-toggle>
       </ion-item>
     </ion-list>
     <ion-list>
       <ion-item>
         <ion-label>Pedidos de Módulos</ion-label>
-        <ion-toggle [(ngModel)]="sMod" color="medium"></ion-toggle>
+        <ion-toggle [(ngModel)]="sMod" value="sMod" color="medium"></ion-toggle>
       </ion-item>
     </ion-list>
     <ion-list>
       <ion-item>
         <ion-label>Pedidos de Reuniões</ion-label>
-        <ion-toggle [(ngModel)]="sReu" color="medium"></ion-toggle>
+        <ion-toggle [(ngModel)]="sReu" value="sReu" color="medium"></ion-toggle>
 
       </ion-item>
     </ion-list>
