--- a/src/app/agenda/agenda.page.html
+++ b/src/app/agenda/agenda.page.html
@@ -56,7 +56,7 @@
 
 
     <ion-item>
-      <ion-label position="floating">COMPORTAMENTO:</ion-label>
+        <ion-label position="floating">COMPORTAMENTO:</ion-label>
       <ion-range min="0" max="10" pin="true" [(ngModel)]="conduct" color="medium">
         <ion-icon slot="start" name="sad"></ion-icon>
         <ion-icon slot="end" name="happy"></ion-icon>
@@ -66,6 +66,11 @@
 
       </ion-range>
     </ion-item>
+
+    <ion-item>
+        <ion-label position="floating">COMENTÁRIO:</ion-label>
+        <ion-textarea [(ngModel)]="comentario" rows="10" cols="30"></ion-textarea>
+      </ion-item>
   </ion-list>
 
   <ion-button (click)="send()" expand="block" color="medium">Enviar Informe</ion-button>
