--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -57,16 +57,14 @@
       <ion-button expand="small" slot="end" fill="outline" (click)="presentModal('req')">Alterar</ion-button>
 
     </ion-list>
-
-
-
-
   </div>
 
   <div *ngIf="typo == 'pai'">
-    <ion-card *ngFor="let req of req | async" (click)="presentModal(req)">
-      <img class="img" src="{{req.img}}" />
-      <div class="card-title">{{req.nome}}</div>
-    </ion-card>
+    <div *ngFor="let req of req | async">
+      <ion-card *ngIf="req.status == true" (click)="presentModal(req)">
+        <img class="img" src="{{req.img}}" />
+        <div class="card-title">{{req.nome}}</div>
+      </ion-card>
+    </div>
   </div>
 </ion-content>
