--- a/src/app/nova-noticia/nova-noticia.page.html
+++ b/src/app/nova-noticia/nova-noticia.page.html
@@ -1,9 +1,35 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title>novaNoticia</ion-title>
+  <ion-toolbar [color]="colorStatus?'toolbar-color':'medium'">
+    <ion-buttons slot="end">
+      <ion-button (click)="dismiss()">
+        <ion-icon slot="icon-only" name="close"></ion-icon>
+      </ion-button>
+    </ion-buttons>
+    <ion-title>Nova Notícia</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
+  <ion-list>
+    <ion-list-header>
+      <ion-label>Preencha os campos</ion-label>
+    </ion-list-header>
+    <ion-item>
+      <ion-label position="floating">Titulo</ion-label>
+      <ion-input [(ngModel)]="tituloNoticia" placeholder="Ex: Novos modelos de fardamento"></ion-input>
+    </ion-item>
 
+    <ion-item>
+      <ion-label position="floating">Descrição</ion-label>
+      <ion-textarea [(ngModel)]="descriNoticia" rows="6" cols="30"
+        placeholder="Ex: Estão disponíveis os novos fardamentos. Faça seu pedido na parte de requisições.">
+      </ion-textarea>
+    </ion-item>
+
+
+  </ion-list>
+
+  <ion-button color="medium" expand="block" (click)="subNoticia()">
+    Adicionar nova noticia
+  </ion-button>
 </ion-content>
