--- a/src/app/informe/informe.page.html
+++ b/src/app/informe/informe.page.html
@@ -29,4 +29,8 @@
       <p>Nota de Comportamento: {{ this.info.conduct }}</p>
     </ion-card-content>
   </ion-card>
+
+  <ion-card *ngFor="">
+
+  </ion-card>
 </ion-content>
