--- a/src/app/tab2/tab2.page.scss
+++ b/src/app/tab2/tab2.page.scss
@@ -12,3 +12,8 @@ p, ion-card-subtitle{
     overflow: hidden;
     padding: 2px !important;
   }
+  .vermelho {
+    max-height: 130px;
+    overflow: hidden;
+    padding: 2px !important;
+  }
